--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,6 @@
     "phpunit/phpunit": "5.6.*"
   },
   "autoload": {
-    "psr-4": {
-      "olxtest\\": "src/"
-    }
+    "psr-4": { "olxtest\\": "src/" }
   }
 }
