--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "OLX-Test",
+  "name": "User REST API",
   "version": "1.0.0",
   "minimum-stability": "stable",
   "license": "proprietary",
